@@ -6,6 +6,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+CR-2009-08-06-0: Enhancem.:  Added new check for issue #3096 into existing
+                             shadowd_migrate test
+                 Review:     DG
 
 RH-2009-08-05-0: Enhancem.:  Hedeby: Adjustments for first check in of the bound
                                      resource concept
